--- a/src/main/resources/templates/fragmentos/modelo.html
+++ b/src/main/resources/templates/fragmentos/modelo.html
@@ -1,12 +1,12 @@
 <div th:fragment="navbar" class="container border ">
 
 	<div class="  row">
-		<nav class="navbar navbar-expand-lg navbar-light ">
-			<div class="col-3"><a class="navbar-brand col" href="pag1">Página 1</a></div>
-			<div class="col-3"><a class="navbar-brand col" href="pag2">Página 2</a></div>
-			<div class="col-2"></div>
-			<div class="col-3"></div>
-	</nav>
+			<nav class="navbar navbar-expand-lg navbar-light ">
+				<div class="col-3"><a class="navbar-brand col" th:href="@{pag1}">Página 1</a></div>
+				<div class="col-3"><a class="navbar-brand col" th:href="@{pag2}">Página 2</a></div>
+				<div class="col-2"></div>
+				<div class="col-3"></div>
+			</nav>
 	  </div>
 </div>
 
