--- a/src/main/resources/templates/pag1.html
+++ b/src/main/resources/templates/pag1.html
@@ -1,30 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página 1</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-</head>
-<body>
-    <header>
-        <div th:replace="fragmentos/modelo :: navbar"></div>
-    </header>
+<html th:include="fragmentos/esqueleto :: template">
 
-    <main>
-
-        <div class="container p-5 border">
-
-            <div class="row">
-                <div class="col"><img class="figure-img img-fluid rounded" src="https://dkrn4sk0rn31v.cloudfront.net/uploads/2021/04/thymeleaf-reaproveitando-codigo-com-fragments-400x280.png" alt=""></div>
-                <div class="col"><img  class="figure-img img-fluid rounded" src="https://getbootstrap.com.br/docs/4.1/assets/img/bootstrap-stack.png" alt=""></div>
+<main th:fragment="principal">
+    <div class="container p-5 border">
+        <div class="row">
+            <div class="col"><img class="figure-img img-fluid rounded"
+                    src="https://dkrn4sk0rn31v.cloudfront.net/uploads/2021/04/thymeleaf-reaproveitando-codigo-com-fragments-400x280.png"
+                    alt="">
+            </div>
+            <div class="col"><img class="figure-img img-fluid rounded"
+                    src="https://getbootstrap.com.br/docs/4.1/assets/img/bootstrap-stack.png" alt="">
             </div>
         </div>
-    </main>
+    </div>
+</main>
 
-    <footer>
-        <div th:replace="fragmentos/modelo::footer"></div>
-    </footer>
-</body>
 </html>
