--- a/src/main/resources/templates/pag2.html
+++ b/src/main/resources/templates/pag2.html
@@ -1,22 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página 2</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-
-</head>
-<body>
-    <header>
-        <div th:replace="fragmentos/modelo :: navbar">
-        </div>
-
-    </header>
-    <main>
+<html th:include="fragmentos/esqueleto::template">
+<main th:fragment="principal">
         <div class="container">
-            <div class="row border">
+            <div class="row border p-3">
 
                 <div class="col-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione voluptatum natus commodi assumenda doloremque saepe repellat quasi vitae libero dolore! Quo consequatur similique voluptatum velit tempore et hic dolores nemo?
                     Praesentium totam corporis omnis quibusdam atque incidunt possimus sequi quaerat illo doloribus sint enim vel similique, animi ipsam autem aperiam dolore, itaque doloremque quam deserunt? Ullam facere nihil alias commodi?
@@ -31,9 +16,4 @@
             </div>
         </div>
     </main>
-    <footer>
-        <div th:replace="fragmentos/modelo::footer"></div>
-    </footer>
-
-</body>
 </html>
